css/profile.css
#profile-owner-block {
	position: fixed;
	top: 20px;
	left: 0;
	background: #303030;
	margin-left: 20px;
	float: none;
	width: auto;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	-webkit-backface-visibility: hidden;
	z-index: 1;
	padding-top: 10px;
	padding-left: 10px;
	padding-right: 10px;
	padding-bottom: 7px;
}

.elgg-avatar-large > a > img {
	background-position: center !important;	
	height: 200px;
}

.profile-action-menu {
	position: fixed;
	top: 315px;
	background: rgba(226,226,226,0.7);
	padding-left: 10px;
	padding-right: 10px;
	padding-top: 10px;
	padding-bottom: 6px;
	width: 200px;
	text-align: center;
	left: 20px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}

.profile-action-menu a {
	padding: 10px;
}

.profile-action-menu li:nth-child(2) {
	margin-top: 10px;
}

#profile-details {
	left: 262px;
	width: 250px;
	top: 0;
	position: absolute;
	background: rgba(0,0,0,0.1);
	height: 100%;
	overflow: visible;
}

.elgg-main {
	overflow: visible;
}

.elgg-page-default .elgg-page-body > .elgg-inner {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	overflow: hidden;
	padding: 0;
	margin: 0;
}

.elgg-main, .elgg-layout {
	width: 100%;
	height: 100%;
}

#profile-details h2 {
	text-align: center;
	padding-top: 10px;
	padding-bottom: 20px;
	color: black;
}

.profile-aboutme {
	font-weight: normal;
	font-size: 220%;
	color: #404040;
	line-height: 1em;
	padding-bottom: 25px;
}

.profile-details {
	padding-top: 10px;
}

.profile-location {
	padding: 10px;
	width: 100%;
	font-size: 130%;
	color: #404040;
	height: 100%;
	vertical-align: middle;
	text-indent: 20px;
}

.profile-website {
	padding: 10px;
	width: 100%;
	font-size: 130%;
	color: #404040;
	height: 100%;
	vertical-align: middle;
	text-indent: 20px;
}

.profile-activity {
    top: 20px;
    right: 0px;
    bottom: 80px;
    left: 542px;
    position: absolute;
    -moz-column-count:3; /* Firefox */
	-webkit-column-count:3; /* Safari and Chrome */
	column-count:3;
	-moz-column-gap: 0px; /* Firefox */
	-webkit-column-gap: 0px; /* Safari and Chrome */
	column-gap: 0;
	margin-left: 0px;
	width: 930px;
}

.elgg-list-river > li, .elgg-list-annotation > li {
	width: 300px;
	padding-bottom: 0px;
	border: 0;
	padding-left: 20px;
	padding-right: 20px;
	display: inline-block;
}

.elgg-river-message, .elgg-river-content, .elgg-output {
	border: 0;
	margin-top: 20px;
	font-size: 130%;
	margin-right: 3px;
	background: white;
	padding: 20px;
	color: #666;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}

.elgg-river-attachments {
	border: 0;
	margin-top: 35px;
	font-size: 130%;
	margin-right: 3px;
	background: white;
	padding: 20px;
	color: #666;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;	
}

.elgg-river-attachments .elgg-avatar-large > a > img {
	margin-top: 0;
	margin-left: 23px;
}

.elgg-icon-arrow-right {
	margin-top: 40px;
	margin-left: 10px;
	padding-left: 10px;
}

.profile-activity .elgg-button {
	padding: 5px 20px;
	margin-right: 7px;
}

.elgg-output {
	margin-top: 40px;
}

.elgg-list {
	border: 0;
}

.messageboard-input {
    height: 100px;
    width: 290px;
    margin-left: 20px;
    margin-bottom: 10px;
}

.profile-friends {
	padding-top: 30px;
	text-align: center;
}

.profile-follow, .profile-report, .profile-sendmessage, .profile-unfollow {
	width: 178px;
	z-index: 1;
	color: white;
	font-size: 100%;
	float: none;
	margin-bottom: 10px !important;
}

.profile-follow:hover, .profile-report:hover, .profile-sendmessage:hover, .profile-unfollow:hover {
	color: white;
}

textarea {
	resize: none;
}

.profile-admin-menu-wrapper {
	margin-top: 10px;
	margin-bottom: 5px;
}

.elgg-body, .elgg-col-last {
	overflow: visible;
	margin-left: 0px;
	margin-right: 10px;
}

.profile-friends .elgg-avatar {
	padding: 5px;
}

.elgg-menu-hover .profile-follow, .elgg-menu-hover .profile-report, .elgg-menu-hover .profile-sendmessage, .elgg-menu-hover .profile-unfollow {
	color: black !important;
	margin-bottom: 0 !important; 
}

.elgg-list {
	margin: 0;
}

.elgg-river-more {
	float: none;
}

.elgg-river-responses .elgg-button {
	padding: 3px;
	padding-left: 5px;
	padding-right: 5px;
}

.elgg-river-item input[type="text"] {
    width: 66%;
}

.sidebar-info {
	display: table;
	width: 200px;
	margin-top: 8px;
	margin-bottom: 3px;
	background-color: rgb(34, 34, 34);
	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5) inset;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;

}

.sidebar-info li {
	display: table-cell;
	padding: 0;
	margin: 0;
}

.sidebar-info a {
    display: block;
    text-align: center;
    color: #ccc;
	padding-top: 10px;
	padding-bottom: 8px;
}

.sidebar-info a b {
	color: #a9a9a9;
	font-size: 150%;
}

.sidebar-info li a:hover {	
	color: white;
	box-shadow: inset 0px -3px 0px 0px #2e88c4;
 	-moz-box-shadow: inset 0px -3px 0px 0px #2e88c4;
 	-webkit-box-shadow: inset 0px -3px 0px 0px #2e88c4;
}

.sidebar-following {
	width: 50px;
	border-right: 1px solid rgb(34, 34, 34);
	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1) inset;
	-webkit-border-top-left-radius: 5px;
	-webkit-border-bottom-left-radius: 5px;
	-moz-border-radius-topleft: 5px;
	-moz-border-radius-bottomleft: 5px;
	border-top-left-radius: 5px;
	border-bottom-left-radius: 5px;
}

.sidebar-followers {
	width: 50px;
	border-right: 1px solid rgb(34, 34, 34);
	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5) inset;
}

.sidebar-wires {
	width: 50px;
	border-left: 1px solid rgb(34, 34, 34);
	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5) inset;
	-webkit-border-top-right-radius: 5px;
	-webkit-border-bottom-right-radius: 5px;
	-moz-border-radius-topright: 5px;
	-moz-border-radius-bottomright: 5px;
	border-top-right-radius: 5px;
	border-bottom-right-radius: 5px;
}

.elgg-infinite-scroll-bottom:nth-child(3) {
	display: none;
}

.elgg-infinite-scroll-bottom .elgg-button {
	padding: 10px;
}

#profile-owner-block a.elgg-button-action {
	-webkit-border-radius: 8px !important;
	-moz-border-radius: 8px !important;
	border-radius: 8px !important;
}

